tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacificathon-api-svc
  namespace: packapp11
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: pacificathon-api
